--- a/arm.fedoraproject.org/data/content/prerelease.html
+++ b/arm.fedoraproject.org/data/content/prerelease.html
@@ -82,7 +82,7 @@
             <h3>${_('Fedora Workstation')}</h3>
             </div>
             <div class="col-sm-3 hidden-xs">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['pre_ARM_Workstation']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['pre_ARM_Workstation']}</p>
             </div>
             <div class="col-sm-5 hidden-xs">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Workstation/armhfp/Images/Fedora-Workstation-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Workstation-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-CHECKSUM">${_('Verify')}</a></p>
@@ -100,7 +100,7 @@
             <h3>${_('KDE Plasma Desktop')}</h3>
             </div>
             <div class="col-sm-3 hidden-xs">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['pre_ARM_KDE']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['pre_ARM_KDE']}</p>
             </div>
             <div class="col-sm-5 hidden-xs">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Images/armhfp/Fedora-KDE-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-CHECKSUM">${_('Verify')}</a></p>
@@ -118,7 +118,7 @@
             <h3>${_('Xfce Desktop')}</h3>
             </div>
             <div class="col-sm-3 hidden-xs">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['pre_ARM_Xfce']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['pre_ARM_Xfce']}</p>
             </div>
             <div class="col-sm-5 hidden-xs">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Images/armhfp/Fedora-Xfce-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-CHECKSUM">${_('Verify')}</a></p>
@@ -154,7 +154,7 @@
             <h3>${_('MATE-Compiz Desktop')}</h3>
             </div>
             <div class="col-sm-3 hidden-xs">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['pre_ARM_Mate']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['pre_ARM_Mate']}</p>
             </div>
             <div class="col-sm-5 hidden-xs">
             <p class="download"><a href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Images/armhfp/Fedora-Mate-armhfp-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-${global_variables.release['RC_pre_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="${path}/static/checksums/Fedora-Spins-${global_variables.release['next_arm_id']}_${global_variables.release['curr_arm_state']}-CHECKSUM">${_('Verify')}</a></p>
