--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -70,7 +70,7 @@
     	  	  <span class="grey">${_('A complete, well-integrated Xfce Desktop.')}</span></p>
     	  	  	<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-Xfce-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
-    	  	  		<h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Xfce']}</h5>
+    	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_x86_64_Live_Xfce']}</h5>
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
 <!--    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-Xfce-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
