--- a/budget.fedoraproject.org/data/content/index.html
+++ b/budget.fedoraproject.org/data/content/index.html
@@ -102,61 +102,27 @@
           </div>
         </div>
 
-        <!--
-        <div id="background">
-        <h2><a href="#background">${_('Fedora.next Background')}</a></h2>
-
-            <p>${_("Fedora.next has precipitated a number of other changes and improvements across the project, and up and down the organizational stack;from release engineering with Bodhi2 and other tools, (reducing the amount of time it takes to ship updates by HALF) to governance and strategy with Fedora Council Objectives.")}</p>
-
-
-            <p>${_('Another change that has been in the works is improving the budget process by which we allocate financial resources. FAMSco has effectively regionalized the process by which local community members request, spend, and report funds. This approach we think is an effective one, we agree that each region knows their own communities and their needs best, and should control their own budgets.')}</p>
-
-            <p>${_('Starting in FY17, there are going to be changes to the budgeting process. The new role of Fedora Community Action and Impact Lead (FCL) has a mandate to improve the transparency of the budgeting process. After some months of planning and discussion, we have come up with a process to move forward.')}</p>
-
-            <p>${_('This process builds off of the work that FAMSCo and other ambassadors (particularly cwickert) did when proposing the idea of FOSCo, and also includes input from Fedora Council, the Fedora Project Lead, and other Fedora Leadership. ')}</p>
-        </div>
-        -->
-
-
         <div id="process">
         <h2><a href="#process">${_('The Fedora Budget Process')}</a></h2>
-        <!--
-        <p>${_('The budget will be split into discreet chunks as follows (FY17 and Beyond):')}</p>
 
-        <ul>
-          <li>${_('Fedora Events (FLOCK/FUDCons)')}</li>
-          <li>${_('Regional Budgets (APAC/EMEA/LATAM/NA)')}</li>
-          <li>${_('Discretionary Council Budget (non-regional general funds)')}</li>
-        </ul>
-
-        <p>${_('The budget will be proposed and approved according to the timeline as follows:')}</p>
-        -->
-
-        <div id="timeline">
-        <pre>
-+----------+------------------+-------------------------------+-------------------------------+
-| Calendar | Fiscal Year      | Topic                         |        Responsible            |
-+----------+------------------+-------------------------------+--------------------------------
-| Feb '16  | FY16             | Final Quarter Budget Report   | Regional Treasurers → FCL     |
-| Mar '16  |     FY17         | Budget Adjustment/Allocation  | Council → Regions/Subprojects |
-| May '16  |     FY17         | First Quarter Budget Report   | Regional Treasurers → FCL     |
-| Jul '16  |         FY18     | Budget Proposal for Next Year | Regions and Subprojects, FCL  |
-| Aug '16  |     FY17         | Second Quarter Budget Report  | Regional Treasurers → FCL     |
-| Aug '16  |         FY18     | Budget Session at Flock       | FCL, Council                  |
-| Sep '16  |         FY18     | Ratification by Council       | Council (full consensus)      |
-| Oct '16  |         FY18     | Budget Submission             | FCL → Red Hat                 |
-| Nov '16  |     FY17         | Third Quarter Budget Report   | Regional Treasurers → FCL     |
-| Feb '17  |     FY17         | Final Quarter Budget Report   | Regional Treasurers → FCL     |
-| Mar '17  |         FY18     | Budget Adjustment/Allocation  | Council → Regions/Subprojects |
-| May '17  |         FY18     | First Quarter Budget Report   | Regional Treasurers → FCL     |
-| Jul '17  |             FY19 | Budget Proposal for Next Year | Regions and Subprojects, FCL  |
-|   ...    |       ...        |             ...               |            ...                |
-+----------+------------------+-------------------------------+-------------------------------+
-        </pre>
-<!--
-calendar, fiscal year (previous, current, future), topic, Responsible
--->
-
+        <div id="timeline2" class="table-responsive">
+            <table class="table table-condensed table-bordered">
+                <tr><th style="text-align:center">${_('Calendar')}</th><th style="text-align:center">${_('Fiscal Year')}</th><th style="text-align:center">${_('Topic')}</th><th style="text-align:center">${_('Responsible')}</th></tr>
+                <tr><td>Feb '16</td><td style="text-align:left">FY16...</td><td>${_('Final Quarter Budget Report')}</td><td>${_('Regional Treasurers → FCL')}</td></tr>
+                <tr><td>Mar '16</td><td style="text-align:center">FY17</td><td>${_('Budget Adjustment/Allocation')}</td><td>${_('Council → Regions/Subprojects')}</td></tr>
+                <tr><td>May '16</td><td style="text-align:center">FY17</td><td>${_('First Quarter Budget Report')}</td><td>${_('Regional Treasurers → FCL')}</td></tr>
+                <tr><td>Jul '16</td><td style="text-align:right">FY18</td><td>${_('Budget Proposal for Next Year')}</td><td>${_('Regions and Subprojects, FCL')}</td></tr>
+                <tr><td>Aug '16</td><td style="text-align:center">FY17</td><td>${_('Second Quarter Budget Report')} </td><td>${_('Regional Treasurers → FCL')}</td></tr>
+                <tr><td>Aug '16</td><td style="text-align:right">FY18</td><td>${_('Budget Session at Flock')}</td><td>${_('FCL, Council')}</td></tr>
+                <tr><td>Sep '16</td><td style="text-align:right">FY18</td><td>${_('Ratification by Council')}</td><td>${_('Council (full consensus)')}</td></tr>
+                <tr><td>Oct '16</td><td style="text-align:right">FY18</td><td>${_('Budget Submission')}</td><td>${_('FCL → Red Hat')}</td></tr>
+                <tr><td>Nov '16</td><td style="text-align:center">FY17</td><td>${_('Third Quarter Budget Report')}</td><td>${_('Regional Treasurers → FCL')}</td></tr>
+                <tr><td>Feb '17</td><td style="text-align:center">FY17</td><td>${_('Final Quarter Budget Report')}</td><td>${_('Regional Treasurers → FCL')}</td></tr>
+                <tr><td>Mar '17</td><td style="text-align:right">FY18</td><td>${_('Budget Adjustment/Allocation')}</td><td>${_('Council → Regions/Subprojects')}</td></tr>
+                <tr><td>May '17</td><td style="text-align:right">FY18</td><td>${_('First Quarter Budget Report')}</td><td>${_('Regional Treasurers → FCL')}</td></tr>
+                <tr><td>Jul '17</td><td style="text-align:right">...FY19</td><td>${_('Budget Proposal for Next Year')}</td><td>${_('Regions and Subprojects, FCL')}</td></tr>
+                <tr><td style="text-align:center">...</td><td style="text-align:center">...</td><td style="text-align:center">...</td><td style="text-align:center">...</td></tr>
+            </table>
         </div>
 
         <p>${_('FCL = Fedora Community Action and Impact Lead (as of Fedora 22+, Remy DeCausemaker).')}</p>
