--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -96,7 +96,7 @@
   	  	  		</div>
   	  	  		<div class="col-xs-6 text-center">
     	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-LXDE-Live-i686-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a>
-    	  	  		<h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_i686_Live_LXDE']}</h5>
+    	  	  		<h5>${Markup(_('%s GB ISO Image')) % global_variables.iso_size['pre_i686_Live_LXDE']}</h5>
   	  	  		</div>
   	  	  	</div>
   	  	   </div>
